--- a/index.html
+++ b/index.html
@@ -73,22 +73,28 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="icons features-group col-lg-4">
+			<div class="icons features-group col-lg-3">
 				<i class="col-md fas fa-check-circle"></i>
 				<h3 class="col-md">Easy to use.</h3>
 				<p class="col-md">So easy to use, even your dog could do it.</p>
 			</div>
 	
-			<div class="features-group col-lg-4">
+			<div class="features-group col-lg-3">
 				<i class="col-md fas fa-bullseye"></i>
 				<h3 class="col-md">Elite Clientele</h3>
 				<p class="col-md">We have all the dogs, the greatest dogs.</p>
 			</div>
 	
-			<div class="features-group col-lg-4">
+			<div class="features-group col-lg-3">
 				<i class="col-md fas fa-heart"></i>
 				<h3 class="col-md">Guaranteed to work.</h3>
 				<p class="col-md">Find the love of your dog's life or your money back.</p>
+			</div>
+
+			<div class="features-group col-lg-3">
+				<i class="col-md fas fa-paw"></i>
+				<h3 class="col-md">The best app!</h3>
+				<p class="col-md">Rated #1 of all dog dating sites in the world!</p>
 			</div>
 		</div>
 
@@ -164,6 +170,7 @@
 				<li>5 Matches Per Day</li>
 				<li>10 Messages Per Day</li>
 				<li>Unlimited App Usage</li>
+				<br>
 			  </ul>
 			  <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign up</button>
 			</div>
@@ -180,6 +187,7 @@
 				<li>Unlimited Matches</li>
 				<li>Unlimited Messages</li>
 				<li>Unlimited App Usage</li>
+				<br>
 			  </ul>
 			  <button type="button" class="w-100 btn btn-lg btn-dark">Sign up</button>
 			</div>
@@ -226,6 +234,7 @@
 	<i class="fab fa-facebook-f"></i>
 	<i class="fab fa-instagram"></i>
 	<i class="fas fa-envelope"></i>
+	<a href="https://github.com/szymonpopio"><i class="fab fa-github"></i></a>
 
     <p>© Copyright 2018 TinDog</p>
 
